# yaca

./: .gitignore  properties.py  properties_lins.py  properties_ts.py  pytest.ini  setup.cfg  stats_tests.py
tests/: test_likelihood.py  test_sim.py
yaca/: likelihood.py  sim.py  sim_hudson.py
