[metadata]
name = yaca
version = 0.0.1
license = GNU GPLv3+ 
author = Gertjan Bisschop
author_email = gertjanbisschop@gmail.com
description = yet another coalescent approximation
url = https://github.com/GertjanBisschop/yaca

classifiers = 
    Programming Language :: Python :: 3

keywords = 
    coalescent

[options]
packages = yaca
python_requires = >=3.7
install_requires = 
    msprime
    numpy
    tskit

[options.extras_require]
tests = 
    argparse
    inspect
    matplotlib
    pytest>=6.2.5
    scipy
    statsmodels
    tqdm

[tool:pytest]
testpaths = 
    tests